force-app/src/objects/FAM__Batch_Log__c.object
<CustomObject>
    <customHelpPage>FAM__FixedAssetBatchJobHelp</customHelpPage>
    <description>Stores log details for an asset or depreciation book that has been processed by batch. For an asset, this will log errors. For a depreciation book, this will log successes, warnings, errors and information.</description>
    <fields>
        <fullName>FAM__Batch_Job__c</fullName>
        <inlineHelpText>Identifies the parent batch job record.</inlineHelpText>
        <label>Fixed Asset Batch Job</label>
        <referenceTo>FAM__Fixed_Asset_Batch_Job__c</referenceTo>
        <relationshipLabel>Batch Logs</relationshipLabel>
        <relationshipName>Batch_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated depreciation book.</inlineHelpText>
        <label>Depreciation Book</label>
        <referenceTo>FAM__Depreciation_Book__c</referenceTo>
        <relationshipLabel>Batch Logs</relationshipLabel>
        <relationshipName>Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__FA_Depreciation_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated depreciation schedule.</inlineHelpText>
        <label>Depreciation Schedule</label>
        <referenceTo>FAM__FA_Depreciation_Schedule__c</referenceTo>
        <relationshipLabel>Batch Logs</relationshipLabel>
        <relationshipName>Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated fixed asset.</inlineHelpText>
        <label>Fixed Asset</label>
        <referenceTo>FAM__Fixed_Asset__c</referenceTo>
        <relationshipLabel>Batch Logs</relationshipLabel>
        <relationshipName>Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Log_Type__c</fullName>
        <inlineHelpText>The log type: Error, Information, Warning, or Confirm.</inlineHelpText>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Message__c</fullName>
        <inlineHelpText>The message for this log entry.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch Log</label>
    <nameField>
        <displayFormat>BL-{000000000}</displayFormat>
        <label>Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>